Right-align month view values, correctly prefixed with currency sign

--- a/app/assets/sass/components/_table.scss
+++ b/app/assets/sass/components/_table.scss
@@ -27,14 +27,7 @@
 				font-size: 27px;
 				font-weight: bold;
 				color: $govuk-secondary-text-colour;
-			}
-
-			&:before {
-				content: "£";
-				font-size: 27px;
-				font-weight: bold;
-				color: $govuk-secondary-text-colour;
-
+				text-align: right;
 			}
 		}
    	}
